# finora

./: .dockerignore  .env.example  .gitignore  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  finora.mcp.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rules-feed.example.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: e2e.yml  release.yml
.gsd/: DECISIONS.md
docs/: architecture.md  onboarding.md  openapi.yaml  rules-design.md
e2e/: README.md  fixtures.ts  seed.setup.ts
e2e/pages/: app.ts
e2e/tests/: banking.spec.ts  brokerage.spec.ts  charts.spec.ts  chat.spec.ts  credit.spec.ts  external-success.spec.ts  feed.spec.ts  navigation.spec.ts  onboarding.spec.ts  plaid.spec.ts  rules.spec.ts  settings-validation.spec.ts  smoke.spec.ts
scripts/: copy-assets.mjs  generate-latest-json.mjs  prepare-desktop-resources.mjs  set-version.mjs
src/: cli.ts  composition.ts  config.ts  desktop-backend.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/application/: errors.ts  finance-service.ts  memory.ts  ports.ts  rules-engine.ts
src/domain/: invariants.ts  models.ts
src/http/: openapi.ts  server.ts
src/infrastructure/: llm-gateway.ts  local-model.ts  (+3 more)
test/: finance-service.test.ts  helpers.ts  http.test.ts  llm-gateway.test.ts  local-model.test.ts  mcp.test.ts  memory.test.ts  parsers.test.ts  sqlite-repository.test.ts  telegram-gateway.test.ts
(+9 files in other folders)
