[package]
name = "finora-desktop"
version = "0.1.0"
description = "Finora desktop application"
authors = ["Finora contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "finora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }
